# opengl_playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  shader.fs  shader.vs
assets/: shader.fs  shader.vs
include/: constants.h  engine.h  linmath.h  phongshader.h  skybox.h
include/glad/: glad.h
lib/: glfw3.def
src/: constants.h  engine.c  engine.h  glad.c  main.c  mymath.c  phongshader.c  skybox.c
src/libs/: glad.c  math.c
